# Docker-Django-Redis-UV-Setup

./: .env  Dockerfile  README.md  db.sqlite3  docker-compose.yml  main.py  manage.py  pyproject.toml
core/: views.py
dockerdjredisuvsetup/: asgi.py  settings.py  urls.py  wsgi.py
redis/: redis.conf
